--- a/src/components/RegisterForm/Register.module.css
+++ b/src/components/RegisterForm/Register.module.css
@@ -12,9 +12,18 @@
 
       input {
         width: 100%;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         padding: 10px;
         border: 1px solid rgb(224, 219, 219);
         border-radius: 0.2rem;
       }
 
+
+      .errorMsg {
+        color: tomato;
+        margin-top: -10px;
+      }
+
+      .input {
+        background-color: green;
+      }
