--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,7 +11,8 @@ header {
   }
   
   .nav-link {
-    padding: 20px;
+    padding: 10px;
+    margin: 10px;
     text-decoration: none;
     border-radius: 0.5rem;
   }
@@ -19,4 +20,9 @@ header {
   .nav-link:hover {
     background-color: brown;
     color: snow;
+}
+
+.container {
+  display: flex;
+  align-items: center;
 }
