--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -3,10 +3,59 @@
 }
 
 
-.container{
+.login-container{
 
     max-width: 500px;
     margin: 0 auto;
-    padding: 0 5%;
+    padding: 3% 3%;
+    border: 1px solid lightseagreen;
+    border-radius: 0.5rem;
+}
+
+
+
+
+
+/* ************************************* */
+
+/* margin: 0 auto;
+padding: 3% 3%;
+max-width: 500px;
+position: relative;
+  margin: 50px auto 0;
+  width: 500px;
+  height: 250px;
+  background: linear-gradient(0deg, #000, #272727);
+
 
   }
+
+  .login-container:before, .login-container:after {
+    content: '';
+    position: absolute;
+    left: -2px;
+    top: -2px;
+    background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00,#ffff00, #ff0000, #fb0094, 
+      #0000ff, #00ff00,#ffff00, #ff0000);
+    background-size: 400%;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    z-index: -1;
+    animation: steam 20s linear infinite;
+  }
+  
+  @keyframes steam {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+  
+  .login-container:after {
+    filter: blur(50px);
+  } */
