--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 body {
+
+
+    /* margin: 0;
+    padding: 0;
+    background-color: lightsteelblue; */
+
+
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 
     /* ************************* */
-/* 
-    margin: 0;
-    padding: 0;
-    background-color: #000; */
+
 }
 
 .title{
