--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -8,7 +8,21 @@
     max-width: 500px;
     margin: 0 auto;
     padding: 3% 3%;
-    border: 1px solid lightseagreen;
+    /* border: 1px solid lightseagreen; */
     border-radius: 0.5rem;
+    border: 1px solid lightseagreen;;
+    /* padding: 10px; */
+    box-shadow: 5px 10px 18px #888888;
 }
 
+
+.errorMsg {
+    color: tomato;
+    margin-top: -10px;
+  }
+
+
+
+.error-input {
+    border: 1px solid tomato;
+}
