--- a/src/components/AddForm/AddForm.module.css
+++ b/src/components/AddForm/AddForm.module.css
@@ -1,6 +1,5 @@
 
-.login-container{
-
+.add-container{
     max-width: 500px;
     margin: 0 auto;
     padding: 3% 3%;
@@ -11,13 +10,10 @@
     box-shadow: 5px 10px 18px #888888;
 }
 
-
 .errorMsg {
     color: tomato;
     margin-top: -10px;
   }
-
-
 
 .error-input {
     border: 1px solid tomato;
