--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,7 +1,13 @@
 .cards-display {
-    display: flex;
-    gap: 10px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
     max-width: 50%;
-    /* box-shadow: 5px 10px 18px #dad5d5; */
-  
 }
+
+.container {
+    width: 600px;
+    margin: 0 auto;
+    text-align: center;
+}
+
