--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -6,6 +6,6 @@
       }
 
       button:hover {
-          color:bisque;
-          background-color:brown;
+          color:black;
+          background-color:rgba(38, 118, 224, 0.532);
       }
