--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,8 @@
 body {
-
-
-    /* margin: 0;
-    padding: 0;
-    background-color: lightsteelblue; */
-
-
+    background-image: url("https://bridgingthegap.org/wp-content/uploads/2016/03/Office-Background-Blur.jpg");
+    background-repeat:no-repeat;
+    background-size:cover;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-
-    /* ************************* */
-
 }
 
 .title{
