--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -3,13 +3,11 @@
     max-width: 500px;
     margin: 0 auto;
     padding: 3% 3%;
-    /* border: 1px solid lightseagreen; */
     border-radius: 0.5rem;
-    border: 1px solid lightseagreen;;
-    /* padding: 10px; */
+    border: 1px solid lightseagreen;
     box-shadow: 5px 10px 18px #888888;
+    background-color: rgba(240, 248, 255, 0.375);
 }
-
 
 .errorMsg {
     color: tomato;
@@ -21,8 +19,3 @@
 .error-input {
     border: 1px solid tomato;
 }
-
-a {
-    margin-left: 10px;
-}
-
