--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -28,6 +28,7 @@ header {
 
 .img {
   width: 80px;
+  padding: 0 20px;
 }
 
 .login-logout-nav {
@@ -36,8 +37,9 @@ header {
 }
 
 .logout-msg {
-  color: white;
-  background-color: rgb(53, 142, 205);
-  padding: 10px;
+  color: black;
+  background-color: white;
+  padding: 10px 15px;
   border-radius: 0.5rem;
+  border: 1px solid tomato;
 }
