--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,9 @@ body {
     background-image: url("https://bridgingthegap.org/wp-content/uploads/2016/03/Office-Background-Blur.jpg");
     background-repeat:no-repeat;
     background-size:cover;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    /* font-family: 'Montserrat', sans-serif; */
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 200;
 }
 
 .title{
