--- a/src/components/AddForm/AddForm.module.css
+++ b/src/components/AddForm/AddForm.module.css
@@ -3,11 +3,10 @@
     max-width: 500px;
     margin: 0 auto;
     padding: 3% 3%;
-    /* border: 1px solid lightseagreen; */
     border-radius: 0.5rem;
     border: 1px solid lightseagreen;;
-    /* padding: 10px; */
     box-shadow: 5px 10px 18px #888888;
+    background-color: rgba(240, 248, 255, 0.513);
 }
 
 .errorMsg {
