--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,13 +1,13 @@
 .footer {
-    position: relative;
-    height: 100px;
-    width: 100%;
+  position: absolute;
+  transform: translate(0%, 100%);
+  width: 100%;
+  height: 4rem;
   }
 
   .copyright {
-    position: absolute;
     width: 100%;
-    color: #fff;
+    color: black;
     line-height: 40px;
     font-size: 0.8em;
     text-align: center;
