--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -47,3 +47,18 @@ header {
   border-radius: 0.5rem;
   border: 1px solid tomato;
 }
+
+
+@media screen and (max-width: 425px) {
+  .user-email {
+    display: none;
+  }
+.nav-link {
+  padding: 0px;
+}
+
+.img {
+  padding: 0;
+}
+
+}
