--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,12 +1,12 @@
 .cards-display {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
-    max-width: 50%;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    /* max-width: 50%; */
 }
 
 .container {
-    width: 600px;
+    width: 800px;
     margin: 0 auto;
     text-align: center;
 }
@@ -18,3 +18,52 @@
 .empty-page-text {
     margin-bottom: 200px;
 }
+
+
+@media screen and (min-width: 320px) {
+    .cards-display {
+      display: grid;
+      grid-template-columns: 1fr;
+    }
+
+    .container {
+        width: 150px;
+    }
+
+  }
+
+@media screen and (min-width: 425px) {
+    .cards-display {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    .container {
+        width: 350px;
+    }
+
+  }
+  
+  @media screen and (min-width: 768px) {
+    .cards-display {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .container {
+        width: 800px;
+    }
+
+  }
+  @media screen and (min-width: 1024px) {
+    .cards-display {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+  }
+  @media screen and (min-width: 1440px) {
+    .cards-display {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+  }
