--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -2,7 +2,7 @@
         font-size: 15px;
         border: 1px solid lightseagreen; 
         border-radius: 0.5rem;
-        padding: 10px;
+        padding: 10px 30px;
         background-color: transparent;
       }
 
